--- a/README
+++ b/README
@@ -46,5 +46,5 @@ Thanks to
 	- Lucas Fontes (this old friend gave me the idea of this software in a 
 	                discussion of trends and market needs)
 	- Gleicon Moraes (talk about sentiment analysis)
-	- Amanda Leal (my girlfriend and future wife)
+	- Amanda Leal (my girlfriend and future mother of my children)
 
